--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>higher-order-function</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Prograd Lab - higher-order-function</h1>
+    <span>Press <strong>F12</strong> to see the output in Console</span> <br><br>
+    <span>OR Simply <strong>Right Click</strong> Then Inspect and Select Console</span>
     <script src="app.js"></script>
 </body>
 </html>
